# klav

./: .gitignore  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md  ROADMAP.md  flake.nix  klav.toml
.github/workflows/: ci.yml
keymaps/: ergodox.toml  ortho.toml  qwerty-win.toml  qwerty.toml
klav-core/: Cargo.toml
klav-core/src/: config.rs  dictionary.rs  keymap.rs  lib.rs  stroke.rs  theory.rs  translator.rs
klav-daemon/: Cargo.toml
klav-daemon/src/: ipc.rs  main.rs
klav-daemon/src/input/: evdev.rs  mod.rs  win32hook.rs  win_hook.rs
klav-daemon/src/output/: fcitx5.rs  ibus.rs  mod.rs  sendinput.rs  uinput.rs  win_sendinput.rs  wtype.rs  xdotool.rs
klav-gui/: Cargo.toml
klav-gui/src/: app.rs  main.rs
theories/en-plover/: dict_base.json  theory.toml
theories/ja-stenoword/: dict_base.json  rules.toml  theory.toml
tools/dict-gen/: Cargo.toml
tools/dict-gen/src/: main.rs
