[workspace]
resolver = "2"
members = [
    "klav-core",
    "klav-daemon",
    "klav-gui",
    "tools/dict-gen",
]

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "MIT OR Apache-2.0"
repository = "https://github.com/user/klav"

[workspace.dependencies]
klav-core = { path = "klav-core" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
thiserror = "2"
log = "0.4"
env_logger = "0.11"
clap = { version = "4", features = ["derive"] }
anyhow = "1"
