[package]
name = "klav-core"
description = "Core library for the Klav stenotype engine"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
toml = { workspace = true }
thiserror = { workspace = true }
log = { workspace = true }
