[package]
name = "klav-daemon"
description = "System daemon for the Klav stenotype engine"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
klav-core = { workspace = true }
log = { workspace = true }
env_logger = { workspace = true }
clap = { workspace = true }
anyhow = { workspace = true }

[target.'cfg(target_os = "linux")'.dependencies]
evdev = "0.12"
nix = { version = "0.29", features = ["ioctl", "fs"] }
